consistent file formatting

--- a/01.VanillaJS/02.BasicExampleWithShadowDOM/index.html
+++ b/01.VanillaJS/02.BasicExampleWithShadowDOM/index.html
@@ -22,8 +22,11 @@
     </p>
     <uc-tooltip></uc-tooltip>
     <div>This does not get the web component styles!</div>
-    
-    <i>When extending specific element class we do it with <strong>is</strong> property, not with custom tag</i>
+
+    <i
+      >When extending specific element class we do it with
+      <strong>is</strong> property, not with custom tag</i
+    >
     <a is="uc-confirm-link" href="https://www.google.com">Google</a>
   </body>
 </html>
