--- a/01.VanillaJS/01.BasicExampleWithoutShadowDOM/index.html
+++ b/01.VanillaJS/01.BasicExampleWithoutShadowDOM/index.html
@@ -18,6 +18,6 @@
       <uc-tooltip text="Web Components is a set of standards.">Web Components</uc-tooltip>
       are awesome!
     </p>
-    <uc-tooltip>Here we go!</uc-tooltip>
+    <uc-tooltip>Here we go! Hover the questionamrk!</uc-tooltip>
   </body>
 </html>
