--- a/01.VanillaJS/01.BasicExampleWithoutShadowDOM/index.html
+++ b/01.VanillaJS/01.BasicExampleWithoutShadowDOM/index.html
@@ -7,7 +7,8 @@
     <title>Web Components</title>
     <style>
       div {
-        border: 2px solid orange;
+        border: 1px solid orange;
+        padding: 3px;
       }
     </style>
     <script src="tooltip.js"></script>
@@ -15,9 +16,9 @@
   <body>
     <p>
       <p>With the <strong>text</strong> property we can provide props</p>
-      <uc-tooltip text="Web Components is a set of standards.">Web Components</uc-tooltip>
-      are awesome!
+      <uq-tooltip text="Text provided to our component.">Web Components</uq-tooltip>
+      examples!
     </p>
-    <uc-tooltip>Here we go! Hover the questionamrk!</uc-tooltip>
+    <uq-tooltip>Hover the questionamrk!</uq-tooltip>
   </body>
 </html>
